--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>HTML Form with CSS</title>
+  <meta name="author" content="John Doe">
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
